Adds Beginning of Chaper 3 - Applications and all included papers - Final Draft

--- a/Talk7/03_related_work/03_related_work.tex
+++ b/Talk7/03_related_work/03_related_work.tex
@@ -9,8 +9,8 @@
 \input{Talk7/03_related_work/03-4_iot}
 \input{Talk7/03_related_work/03-5_applications}
 
-\begin{itemize}
-  \item \textbf{End of section 3}
-  \item shortly summarize the section
-  \item introduce the upcoming content (filler)
-\end{itemize}
+%\begin{itemize}
+%  \item \textbf{End of section 3}
+%  \item shortly summarize the section
+%  \item introduce the upcoming content (filler)
+%\end{itemize}
